Finished register and signup, missing error button

--- a/src/components/global/Button/Button.module.css
+++ b/src/components/global/Button/Button.module.css
@@ -1,17 +1,31 @@
 .button {
-  background-color: #111;
-  color: #F5F5F5;
+  padding-left: 1rem /* 8px */;
+  padding-right: 1rem /* 8px */;
+  padding-top: 0.4rem /* 6px */;
+  padding-bottom: 0.4rem /* 6px */;
+  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    box-shadow 0.1s ease-in-out;
+  border: 2px solid black;
+  flex: 1 1 0%;
   border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  border: none;
-  width: 300px;
+  width: 100%;
+  transform: translateY(4px);
+  box-shadow: 1px 2px 0px 0px #000;
+}
+.button.primary:hover {
+  transform: translateY(0px);
+  box-shadow: 5px 5px 0px 0px #000;
+  background-color: white;
+  color: black;
 }
 
 .button[disabled] {
-  background-color: #DDD;
-  color: #333;
+  background-color: black;
+  text-decoration: line-through;
+  color: white;
   cursor: not-allowed;
+  transform: translateY(4px);
+  box-shadow: 1px 2px 0px 0px #000;
 }
 
 .button.secondary {
@@ -20,11 +34,20 @@
   border: 1px solid #333;
 }
 
-.button > span {
-  display: block;
-  width: 250px;
-  height: 20px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.button.primary {
+  background-color: black;
+  color: white;
+}
+
+.button[disabled].primary:hover {
+  background-color: black;
+  color: white;
+  transform: translateY(4px);
+  box-shadow: 1px 2px 0px 0px #000;
+}
+
+/*TODO consider quit the background-color*/
+.loading {
+  text-decoration: none !important;
+  background-color: white !important;
 }
