--- a/src/components/global/Input/Input.module.css
+++ b/src/components/global/Input/Input.module.css
@@ -1,6 +1,17 @@
 .inputContainer {
-  font-family: Arial;
+  margin-bottom: 20px;
   font-size: 24px;
+}
+
+.inputAlert {
+  color: #333;
+  font-size: 0.7rem;
+
+  border-style: solid;
+  border-width: 0px 2px 2px 2px;
+  border-radius: 0px 0px 5px 5px;
+  border-color: black;
+  padding: 4px;
 }
 
 .inputContainer label {
@@ -11,14 +22,20 @@
 }
 
 .inputContainer label span {
-  font-size: 0.5em;
+  font-size: 1rem;
+  font-weight: bold;
   color: #333;
   text-transform: capitalize;
+  line-height: 0.8;
 }
 
 .inputContainer label input {
+  font-size: medium;
+  padding: 5px;
+  text-indent: 2px;
   outline: none;
-  padding: 5px 10px;
-  border: 1px solid #DDD;
-  border-radius: 3px;
+  width: 100%;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
 }
