--- a/src/components/global/Notification/Notification.module.css
+++ b/src/components/global/Notification/Notification.module.css
@@ -1,10 +1,12 @@
 .notification {
+  font-size: small;
   position: relative;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 5px;
   border: 1px solid rgba(153, 255, 71, 1);
   background-color: rgba(153, 255, 71, 0.2);
   color: rgba(153, 255, 71, 1);
+  text-align: justify;
 }
 
 .notification.danger {
