--- a/src/features/render/RenderEvents/UserEvents.module.css
+++ b/src/features/render/RenderEvents/UserEvents.module.css
@@ -4,9 +4,10 @@
 }
 
 .root {
-  
+  border-radius: 5px;
   /* width: 100vw; */
-  height: 100%;
+  /* height: ; */
+  overflow: scroll;
   /* justify-content: center; */
   /* display: grid; */
   /* place-items: center; */
@@ -18,6 +19,7 @@
   padding: 25px;
   max-width: 100%;
   /* margin: 50px auto; */
+  border-radius: 10px;
   border-style: solid;
   border-width: 3px;
   border-color: black;
