--- a/src/components/global/Event/Event.module.css
+++ b/src/components/global/Event/Event.module.css
@@ -1,8 +1,9 @@
 .container {
-  background-color: #4CC9F0;
+  background-color: #fefae0ef;
   height: 100%;
   width: 100%;
   padding: 10px;
+  border-radius: 20px;
   border-style: solid;
   border-width: 2px;
   border-color: black;
@@ -15,6 +16,10 @@
   text-align: center;
   margin: 0 auto 20px auto;
   height: fit-content;
+}
+
+.container a {
+  font-size: small;
 }
 
 .flex {
