--- a/src/features/render/RenderEvents/UserEvents.module.css
+++ b/src/features/render/RenderEvents/UserEvents.module.css
@@ -5,41 +5,34 @@
 
 .root {
   border-radius: 5px;
-  /* width: 100vw; */
-  /* height: ; */
+  margin: 0;
+  background-color: white;
   overflow: scroll;
-  /* justify-content: center; */
-  /* display: grid; */
-  /* place-items: center; */
-  /* margin-top: 40px; */
-  /* margin-left: 40px; */
-  /* margin-right: 40px; */
   width: 100%;
-  /* background-color: white; */
+  height: 100%;
   padding: 25px;
   max-width: 100%;
-  /* margin: 50px auto; */
-  border-radius: 10px;
+  border-radius: 20px;
   border-style: solid;
-  border-width: 3px;
+  border-width: 2px;
   border-color: black;
   box-shadow: 5px 5px 0px 0px #000;
 }
 
 .root h1 {
   font-family: 'Figtree', sans-serif;
+  font-size: xxx-large;
+  font: red;
   font-weight: bold;
   height: fit-content;
   width: fit-content;
   margin: 0;
   padding: 0;
-  /* grid-row: 1fr; */
 }
 
 .container {
   width: 90%;
   height: 100%;
-  /* margin: 20px; */
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr 1fr 1fr;
