Events styles and sign out button

--- a/src/features/render/RenderEvents/UserEvents.module.css
+++ b/src/features/render/RenderEvents/UserEvents.module.css
@@ -20,8 +20,8 @@
 }
 
 .root h1 {
-  font-family: 'Figtree', sans-serif;
-  font-size: xxx-large;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 70px;
   font: red;
   font-weight: bold;
   height: fit-content;
