--- a/src/components/global/Event/Event.module.css
+++ b/src/components/global/Event/Event.module.css
@@ -1,6 +1,6 @@
 .container {
   background-color: #fefae0ef;
-  height: 100%;
+  height: fit-content;
   width: 100%;
   padding: 10px;
   border-radius: 20px;
@@ -11,15 +11,24 @@
 }
 
 .container h1 {
-  font-family: 'Figtree', sans-serif;
-  font-size: x-large;
+  font-family: 'Bebas Neue', cursive;
+  font-size: xx-large;
   text-align: center;
-  margin: 0 auto 20px auto;
+  margin: 0 auto 0 auto;
   height: fit-content;
+}
+
+.container p {
+  font-family: 'Roboto Mono', monospace;
+}
+
+.container div {
+  font-family: 'Roboto Mono', monospace;
 }
 
 .container a {
   font-size: small;
+  font-family: 'Overpass Mono', monospace;
 }
 
 .flex {
