--- a/src/components/global/Notification/Notification.module.css
+++ b/src/components/global/Notification/Notification.module.css
@@ -3,9 +3,8 @@
   position: relative;
   padding: 10px 10px;
   border-radius: 5px;
-  border: 1px solid rgba(153, 255, 71, 1);
-  background-color: rgba(153, 255, 71, 0.2);
-  color: rgba(153, 255, 71, 1);
+  border: 1px solid black;
+  background-color: #cdd57e;
   text-align: justify;
 }
 
