--- a/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
+++ b/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
@@ -61,3 +61,51 @@
   font-size: xx-large;
   margin: 0 auto 0 auto;
 }
+
+.flexContainer {
+  display: flex;
+  /* height: fit-content; */
+  /* background-color: skyblue; */
+}
+
+.searchBarContainer {
+  display: flex;
+  /* background-color: blue; */
+  place-items: center;
+  height: auto;
+  margin-left: auto;
+  /* width: fit-content; */
+}
+
+.searchBarContainer input {
+  all: unset;
+  /* outline: none; */
+  /* pointer-events: none; */
+  font-family: 'Overpass Mono', monospace;
+  font-size: x-large;
+  padding: 0 0 0 15px;
+  /* background-color: blue; */
+  height: 60%;
+  /* width: 50%; */
+  min-width: 5%;
+}
+
+.searchBarContainer button{
+  padding: 5px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: xx-large;
+  height: 60%;
+  margin: 0;
+  /* all: unset; */
+  /* background-color: red; */
+}
+
+.searchBarOutline {
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  box-shadow: 5px 5px 0px 0px #000;
+  min-width: 20px;
+  height: fit-content;
+}
