--- a/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
+++ b/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
@@ -14,7 +14,7 @@
   box-shadow: 5px 5px 0px 0px #000;
 }
 
-.container::-webkit-scrollbar{
+.container::-webkit-scrollbar {
   width: 10px;
 }
 
@@ -44,15 +44,16 @@
 
 .eventsContainer {
   width: 90%;
-  height: 100%;
-  display: grid;
   place-items: center;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2fr 2fr 2fr 2fr;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+  grid-auto-rows: min-content;
   grid-gap: 20px;
 }
 
@@ -64,48 +65,29 @@
 
 .flexContainer {
   display: flex;
-  /* height: fit-content; */
-  /* background-color: skyblue; */
+  align-items: center;
 }
 
-.searchBarContainer {
-  display: flex;
-  /* background-color: blue; */
-  place-items: center;
-  height: auto;
-  margin-left: auto;
-  /* width: fit-content; */
-}
-
-.searchBarContainer input {
-  all: unset;
-  /* outline: none; */
-  /* pointer-events: none; */
-  font-family: 'Overpass Mono', monospace;
-  font-size: x-large;
-  padding: 0 0 0 15px;
-  /* background-color: blue; */
-  height: 60%;
-  /* width: 50%; */
-  min-width: 5%;
-}
-
-.searchBarContainer button{
-  padding: 5px;
+.flexContainer h1 {
   font-family: 'Bebas Neue', cursive;
-  font-size: xx-large;
-  height: 60%;
+  font-size: 70px;
+  font-weight: bold;
   margin: 0;
-  /* all: unset; */
-  /* background-color: red; */
+  padding: 0;
+  flex-shrink: 0;
 }
 
-.searchBarOutline {
-  border-radius: 20px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: black;
-  box-shadow: 5px 5px 0px 0px #000;
-  min-width: 20px;
-  height: fit-content;
+.flexContainer .search {
+  display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
+.noEvents {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 75%;
+  text-align: center;
+  font-size: 3.8rem;
 }
