--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   margin: 0;
   background-color: white;
-  /* overflow: scroll; */
+  /* overflow: scroll; /
   width: 100%;
   height: 100%;
   padding: 25px;
@@ -22,4 +22,102 @@
   width: fit-content;
   margin: 0;
   padding: 0;
+}
+
+.main_info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+.main_info h3 {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.custom_section:first-child {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.custom_section img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.custom_section h3 {
+  margin: 0;
+}
+
+.custom_section h4 {
+  font-size: 1.5rem;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  opacity: 0.8;
+}
+
+.custom_section p {
+  font-size: 1em;
+  line-height: 1.5em;
+  padding: 0px 100px;
+  margin-bottom: 20px;
+}
+
+/ Estilos para la sección de actividades */
+.custom_section:last-child {
+  margin-top: 50px;
+}
+
+.custom_section ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.custom_section li {
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+
+.custom_section h2 {
+  padding-left: 10px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+.custom_section ul {
+  display: flex;
+  align-items: center;
+}
+
+.custom_section li {
+  padding: 10px;
+  font-size: 1rem;
+  background-color: #cdd57e;
+  margin-right: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+  transform: translateX(-4px) translateY(-4px);
+  box-shadow: 5px 5px 0px 0px #000;
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.custom_section li:hover {
+  transform: translateX(0px) translateY(0px);
+  box-shadow: 0px 0px 0px 0px #000;
+}
+
+.custom_section.sub_section {
+  margin-left: 100px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
