--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   margin: 0;
   background-color: white;
-  /* overflow: scroll; /
+  /* overflow: scroll; */
   width: 100%;
   height: 100%;
   padding: 25px;
@@ -68,7 +68,7 @@
   margin-bottom: 20px;
 }
 
-/ Estilos para la sección de actividades */
+/* Estilos para la sección de actividades */
 .custom_section:last-child {
   margin-top: 50px;
 }
