--- a/src/components/global/Input/Input.module.css
+++ b/src/components/global/Input/Input.module.css
@@ -49,6 +49,10 @@
   border-style: solid;
   border-width: 2px;
   border-color: black;
+  padding: 10px 15px;
+}
+.inputContainer label textarea::placeholder {
+  font-size: small;
 }
 
 .inputTags {
