--- a/src/features/render/HomePage/HomePage.module.css
+++ b/src/features/render/HomePage/HomePage.module.css
@@ -3,7 +3,7 @@
   background-image: url('https://github.com/JDgomez2002/ing_soft_production/blob/main/ing-soft-production/src/img/background%20transparent.png?raw=true');
   background-repeat: no-repeat;
   background-size: cover;
-  height: auto;
+  height: 100%;
   width: 100%;
   padding: 25px;
   border-radius: 20px;
