--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -101,7 +101,7 @@
 .custom_section li {
   padding: 10px;
   font-size: 1rem;
-  background-color: #cdd57e;
+  background-color: #ddb892;
   margin-right: 10px;
   border-radius: 10px;
   border: 1px solid black;
