--- a/src/layouts/Home/SideBar/SideBar.module.css
+++ b/src/layouts/Home/SideBar/SideBar.module.css
@@ -30,12 +30,12 @@
 }
 
 .link:hover {
-  background-color: #cdd57e;
+  background-color: #cd9777;
   cursor: pointer;
 }
 
 .link.active {
-  background-color: #cdd57e;
+  background-color: #ddb892;
 }
 
 .custom_button {
