--- a/src/components/global/Event/Event.module.css
+++ b/src/components/global/Event/Event.module.css
@@ -3,7 +3,7 @@
 */
 
 .container {
-  background-color: #fefae0ef;
+  background-color: #ddb892;
   min-height: 230px;
   width: 100%;
   padding: 30px;
@@ -49,4 +49,20 @@
 
 .flex {
   display: flex;
+}
+
+.container button {
+  color: grey;
+  display: block;
+  padding: 5px;
+  margin: 15px 0 0 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  box-shadow: 2px 2px 0px 0px #000;
+  background-color: white;
 }
