--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -59,3 +59,11 @@ html {
     box-shadow 0.1s ease-in-out;
   border: 2px solid black;
 }
+
+.standard_border {
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    box-shadow: 5px 5px 0px 0px #000;
+}
