--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -12,6 +12,7 @@ font-family: 'Roboto Mono', monospace;
 
 html {
   background-color: #f8f6dd;
+  scroll-behavior: smooth;
   font-family: 'Roboto Mono', monospace;
 }
 
@@ -61,9 +62,9 @@ html {
 }
 
 .standard_border {
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: black;
-    box-shadow: 5px 5px 0px 0px #000;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  box-shadow: 5px 5px 0px 0px #000;
 }
