--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -10,8 +10,14 @@ font-family: 'Roboto Mono', monospace;
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --ink-background-dark: #daf5f0;
+  --ink-background-highlight: #cdd57e;
+  --ink-background-light: transparent;
+  --ink-background-messages: #fdfd96;
+}
+
 html {
-  background-color: #f8f6dd;
   scroll-behavior: smooth;
   font-family: 'Roboto Mono', monospace;
 }
