--- a/src/components/global/Chat/Chat.module.css
+++ b/src/components/global/Chat/Chat.module.css
@@ -20,7 +20,7 @@
 .display_wrapper {
   flex: 10;
   max-height: 80%;
-  background-color: #f8f6dd;
+  background-color: #c4a1ff;
 }
 
 .input_wrapper {
@@ -60,15 +60,16 @@
 }
 
 .display_wrapper .no_messages {
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
-  color: #a8a8a8;
+  font-size: 14px;
   font-weight: bold;
   height: 100%;
   width: 100%;
   text-align: center;
+  color: black;
 }
 
 .messages_wrapper {
@@ -82,4 +83,9 @@
   overflow-x: hidden;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
+}
+
+.display_wrapper .no_messages .no_messages_text {
+  padding: 1rem;
+  background-color: var(--ink-background-messages);
 }
