--- a/src/pages/FriendsDashboard/FriendsDashboard.module.css
+++ b/src/pages/FriendsDashboard/FriendsDashboard.module.css
@@ -16,14 +16,29 @@
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.content_container {
+  display: flex;
+  flex-direction: row;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 50%;
   padding: 1rem;
+  max-height: 100%;
+  overflow-y: scroll;
+}
+
+.chat_container {
+  padding: 1rem;
+  width: 50%;
+  position: relative;
 }
 
 .title {
@@ -36,4 +51,17 @@
 
 .collapse_wrapper {
   padding: 1rem;
+}
+
+.messages_container {
+  position: relative;
+  margin: 1rem;
+}
+
+.search_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 1.6rem;
+  margin-right: 0.9rem;
 }
