--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   margin: 0;
   background-color: white;
-  /* overflow: scroll; */
+  overflow: scroll;
   width: 100%;
   height: 100%;
   padding: 25px;
@@ -14,6 +14,14 @@
   box-shadow: 5px 5px 0px 0px #000;
 }
 
+.container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .container h1 {
   font-family: 'Bebas Neue', cursive;
   font-size: 70px;
@@ -22,6 +30,10 @@
   width: fit-content;
   margin: 0;
   padding: 0;
+}
+
+.container h5 {
+  margin: 0 0 20px 0;
 }
 
 .main_info {
@@ -101,7 +113,7 @@
 .custom_section li {
   padding: 10px;
   font-size: 1rem;
-  background-color: #ddb892;
+  background-color: var(--ink-background-highlight);
   margin-right: 10px;
   border-radius: 10px;
   border: 1px solid black;
@@ -120,4 +132,34 @@
   margin-left: 100px;
   margin-top: 0px;
   margin-bottom: 10px;
+}
+
+.eventsContainer {
+  width: 90%;
+  place-items: center;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+
+  display: grid;
+  /* grid-template-columns: repeat(4, 1fr); */
+  grid-template-columns: 2fr 2fr 1fr 1fr;
+  grid-auto-rows: min-content;
+  grid-gap: 20px;
+}
+
+.eventsContainer h1 {
+  text-align: center;
+  font-size: xx-large;
+  margin: 0 auto 0 auto;
+}
+
+.noEvents {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 75%;
+  text-align: center;
+  font-size: 3.8rem;
 }
