--- a/src/pages/FriendsDashboard/FriendsDashboard.module.css
+++ b/src/pages/FriendsDashboard/FriendsDashboard.module.css
@@ -13,8 +13,7 @@
   border-color: black;
   box-shadow: 5px 5px 0px 0px #000;
   display: flex;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 
   display: flex;
@@ -24,6 +23,10 @@
 .content_container {
   display: flex;
   flex-direction: row;
+  position: relative;
+  height: 87%;
+  max-height: 87%;
+  margin-bottom: 1rem;
 }
 
 .wrapper {
@@ -31,14 +34,19 @@
   flex-direction: column;
   width: 50%;
   padding: 1rem;
-  max-height: 100%;
+  border-right: 1px solid black;
+  padding-bottom: 1rem;
+
   overflow-y: scroll;
+
+  max-height: 100%;
 }
 
 .chat_container {
   padding: 1rem;
   width: 50%;
   position: relative;
+  height: 100%;
 }
 
 .title {
