--- a/src/pages/UserPage/UserPage.module.css
+++ b/src/pages/UserPage/UserPage.module.css
@@ -1,8 +1,9 @@
 .container {
   border-radius: 5px;
   margin: 0;
+  margin-bottom: 15px;
   background-color: white;
-  /* overflow: scroll; */
+  overflow: scroll;
   width: 100%;
   height: 100%;
   padding: 25px;
@@ -13,6 +14,14 @@
   border-color: black;
   box-shadow: 5px 5px 0px 0px #000;
   display: flex;
+}
+
+.container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .profile_info_container {
@@ -27,4 +36,51 @@
   width: fit-content;
   margin: 0;
   padding: 0;
+}
+
+.flex {
+  display: flex;
+}
+
+.container button {
+  color: rgb(54, 54, 54);
+  display: block;
+  margin: 30px 0 0 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  background-color: white;
+  transform: scaleY(-2px) scaleX(-2px);
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  box-shadow: 5px 5px 0px 0px #000;
+}
+
+.container h3 {
+  margin-top: 15px;
+  font-size: x-large;
+}
+
+.container img {
+  height: 100px;
+  width: auto;
+}
+
+.eventsContainer {
+  width: 100%;
+  place-items: center;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+
+  display: grid;
+  /* grid-template-columns: repeat(4, 1fr); */
+  /* grid-template-columns: 2fr 2fr 1fr 2fr; */
+  grid-template-columns: 300px 300px;
+  grid-auto-rows: min-content;
+  grid-gap: 20px;
 }
