--- a/src/pages/FriendsDashboard/FriendsDashboard.module.css
+++ b/src/pages/FriendsDashboard/FriendsDashboard.module.css
@@ -29,6 +29,13 @@
   margin-bottom: 1rem;
 }
 
+.refresh_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-left: 30rem;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
