--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -17,6 +17,10 @@ font-family: 'Roboto Mono', monospace;
   --ink-background-messages: #fdfd96;
 }
 
+:root {
+  --color-background: #daf5f0;
+}
+
 html {
   background-color: var(--ink-background-dark);
   scroll-behavior: smooth;
@@ -83,4 +87,30 @@ html {
   border-width: 2px;
   border-color: black;
   box-shadow: 5px 5px 0px 0px #000;
+}
+
+/*THIS ARE GLOBAL CONFIGURATIONS FOR POPUPS*/
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+@keyframes anvil {
+  0% {
+    transform: scale(1) translateY(0px);
+    opacity: 0;
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+  }
+  1% {
+    transform: scale(0.96) translateY(10px);
+    opacity: 0;
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+  }
+  100% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+    box-shadow: 0 0 500px rgba(241, 241, 241, 0);
+  }
+}
+.popup-content {
+  -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
