--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -60,6 +60,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .custom_section h3 {
@@ -163,4 +164,19 @@
   height: 75%;
   text-align: center;
   font-size: 3.8rem;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 75%;
+  text-align: center;
+  font-size: 3.8rem;
+}
+
+.loading span {
+  font-size: 1rem;
+  margin-top: 10px;
 }
