--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -180,3 +180,34 @@
   font-size: 1rem;
   margin-top: 10px;
 }
+
+.imageWrapper {
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
+
+.imageWrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.imageWrapper button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  border: 1px solid black;
+}
+
+.imageWrapper button:hover {
+  transform: scale(1.1);
+  background-color: #cdd57e;
+}
