--- a/src/pages/UserPage/UserPage.module.css
+++ b/src/pages/UserPage/UserPage.module.css
@@ -31,7 +31,7 @@
 }
 
 .event_title {
-  font-size: 70px;
+  font-size: 50px;
   height: fit-content;
   width: fit-content;
   margin: 0;
@@ -40,23 +40,10 @@
 
 .flex {
   display: flex;
-}
-
-.container button {
-  color: rgb(54, 54, 54);
-  display: block;
-  margin: 30px 0 0 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
-  padding: 0.5rem 1rem;
-  border-radius: 20px;
-  background-color: white;
-  transform: scaleY(-2px) scaleX(-2px);
-  border-style: solid;
-  border-width: 2px;
-  border-color: black;
-  box-shadow: 5px 5px 0px 0px #000;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
 }
 
 .container h3 {
@@ -86,4 +73,8 @@
   grid-template-columns: 300px 300px;
   grid-auto-rows: min-content;
   grid-gap: 20px;
+}
+
+.buttonWrapper {
+  width: 100px;
 }
