feat: confirmation button on send and accept friend request

--- a/src/components/global/UserList/UserList.module.css
+++ b/src/components/global/UserList/UserList.module.css
@@ -34,3 +34,11 @@
   cursor: pointer;
   background-color: #e6e6e6;
 }
+
+.buttonsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
