--- a/src/components/global/AIPicker/AIPicker.module.css
+++ b/src/components/global/AIPicker/AIPicker.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 
   transition: background-color 0.2s ease-in-out;
 }
