Added: Unsave button

--- a/src/components/global/Event/Event.module.css
+++ b/src/components/global/Event/Event.module.css
@@ -5,8 +5,8 @@
   transition: all 0.25s ease-in-out;
   border: 1px solid black;
   text-decoration: none;
-  cursor: not-allowed !important;
-  text-decoration: line-through;
+  /* cursor: not-allowed !important; */
+  /* text-decoration: line-through; */
 }
 
 .container {
