--- a/src/layouts/Home/SideBar/SideBar.module.css
+++ b/src/layouts/Home/SideBar/SideBar.module.css
@@ -27,6 +27,10 @@
   border-radius: 5px;
   padding: 2px 10px;
   padding-left: 20px;
+
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .link:hover {
