--- a/src/layouts/Home/SideBar/SideBar.module.css
+++ b/src/layouts/Home/SideBar/SideBar.module.css
@@ -43,6 +43,7 @@
 }
 
 .custom_button {
+  position: relative;
   display: flex;
   width: max-content;
 }
@@ -55,6 +56,25 @@
 .custom_button div,
 .custom_button span {
   font-size: 24px;
+}
+
+.unread {
+  position: absolute;
+  top: -5px;
+  right: -12px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ef635d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px !important;
+  color: white;
+  font-weight: bold;
+  border: 1px solid white;
+  box-shadow: 0px 0px 0px 2px #ef635d;
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .retract {
