feat: improved notifications

--- a/src/components/global/ControlledPopup/ControlledPopup.module.css
+++ b/src/components/global/ControlledPopup/ControlledPopup.module.css
@@ -10,7 +10,7 @@
 
 .modal > .header {
   width: 100%;
-  border-bottom: 1px solid gray;
+  border-bottom: 2px solid black;
   font-size: 38px;
   text-align: center;
   padding: 5px;
