--- a/src/components/global/UserNotification/UserNotification.module.css
+++ b/src/components/global/UserNotification/UserNotification.module.css
@@ -1,5 +1,5 @@
 .notification {
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 10px;
   background-color: #ffffff;
   padding: 10px;
@@ -16,7 +16,8 @@
 }
 
 .notification .message {
-  font-weight: bold;
+  font-weight: semi-bold;
+  font-size: 1rem;
 }
 
 .notification .date {
@@ -28,11 +29,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0.25rem;
+  align-items: center;
+  padding: 0.25rem 0.5rem;
+  border-left: 2px dashed black;
 }
 
 .notification.unread {
-  background-color: #cdd57e;
+  background-color: #cada3798;
 }
 
 .deleteButton {
@@ -40,6 +43,14 @@
   border: none;
   cursor: pointer;
   font-size: 11px;
+  height: fit-content;
+  border-radius: 50%;
+  padding: 0.5rem 0.55rem;
+  border: 1px solid black;
+}
+
+.deleteButton:hover {
+  background-color: #ef635d;
 }
 
 .readButton {
@@ -47,9 +58,14 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+
+  border-radius: 50%;
+  padding: 0.4rem 0.48rem;
   border: 1px solid black;
-  border-radius: 10px;
-  padding: 0rem;
-  padding-inline: 0.5rem;
-  font-size: 11px;
+  height: fit-content;
+  margin-left: 0.7rem;
+}
+
+.readButton:hover {
+  background-color: #cdd57e;
 }
