--- a/src/layouts/Home/Home.module.css
+++ b/src/layouts/Home/Home.module.css
@@ -4,6 +4,15 @@
   display: flex;
   flex-direction: row;
   background-color: var(--ink-background-dark);
+  font-size: 1em;
+}
+
+/* media query < 650px, turn flex to column of container*/
+@media (max-width: 650px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Add flex property to the sidebar */
