--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -209,23 +209,24 @@
 
 .titleWrapper button {
   background-color: #ffffff;
-    border: none;
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    border: 1px solid black;
-    margin-left: 0.5rem;
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  border: 1px solid black;
+  margin-left: 0.9rem;
+  margin-bottom: 0.3rem;
 }
 
-.imageWrapper button:hover, .titleWrapper button:hover {
+.imageWrapper button:hover,
+.titleWrapper button:hover {
   transform: scale(1.1);
   background-color: #cdd57e;
 }
 
-
-.titleWrapper{
+.titleWrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
