--- a/src/pages/EventPage/EventPage.module.css
+++ b/src/pages/EventPage/EventPage.module.css
@@ -87,16 +87,16 @@
 
 .title_wrapper {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: flex-start;
   margin-bottom: 2rem;
 }
 
-.title_wrapper > h2 {
+.title_wrapper h2 {
   line-height: 0.8;
 }
 
-.title_wrapper > .event_creator {
+.title_wrapper .event_creator {
   border: none;
   padding-left: 0.1rem;
 }
