--- a/src/features/render/RenderProfile/Profile.module.css
+++ b/src/features/render/RenderProfile/Profile.module.css
@@ -143,7 +143,15 @@
   grid-template-columns: 30% 30% 30%;
   column-gap: 3%;
   row-gap: 15px;
+}
 
+.eventsContainerOtherProfile {
+  margin: 10px 0 25px 0;
+  width: 100%;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: 100%;
+  row-gap: 25px;
 }
 
 .eventsContainer h1 {
