--- a/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
+++ b/src/features/render/RenderGlobalEvents/GlobalEvents.module.css
@@ -5,13 +5,14 @@
   overflow: scroll;
   width: 100%;
   height: 100%;
-  padding: 25px;
+  padding: 13px;
   max-width: 100%;
   border-radius: 20px;
   border-style: solid;
   border-width: 2px;
   border-color: black;
   box-shadow: 5px 5px 0px 0px #000;
+  font-size: 1em;
 }
 
 .container::-webkit-scrollbar {
@@ -43,11 +44,12 @@
 }
 
 .flexContainer h1 {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Space Grotesk', cursive;
   font-size: 70px;
   font-weight: bold;
   margin: 0;
   padding: 0;
+  text-transform: uppercase;
   flex-shrink: 0;
 }
 
@@ -73,6 +75,7 @@
 
 .dateFilter {
   display: flex;
+  flex-wrap: wrap;
   gap: 1em;
 }
 
