--- a/src/layouts/Home/Home.module.css
+++ b/src/layouts/Home/Home.module.css
@@ -13,6 +13,10 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .outlet {
+    padding: 10px !important;
+  }
 }
 
 /* Add flex property to the sidebar */
