--- a/src/layouts/Home/SideBar/SideBar.module.css
+++ b/src/layouts/Home/SideBar/SideBar.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   padding: 22px 22px 22px 22px;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   margin-left: 30px;
   border-width: 2px;
   border-color: black;
@@ -13,73 +13,17 @@
   align-items: center;
 }
 
-@media (max-width: 650px) {
-  .container {
-    margin-left: 0;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    width: 90%;
-    height: auto !important;
-    padding: 0.7em;
-  }
+.logoRetract {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 0 !important;
+}
 
-  .links {
-    flex-direction: row !important;
-    flex-wrap: wrap;
-    align-items: center;
-    height: auto !important;
-  }
-  .link {
-    margin: 0.1em !important;
-  }
-
-  .link.active {
-    background-color: var(--ink-background-highlight);
-    border: 1.5px dashed rgb(112, 112, 112);
-  }
-
-  .retracted.links {
-  }
-
-  .container.retracted {
-    width: 90%;
-    margin-left: 0 !important;
-  }
-
-  .logoRetract {
-    display: flex !important;
-
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-  }
-
-  .retract {
-    margin: 0 !important;
-    width: auto !important;
-  }
-
-  .container.retracted .links {
-    display: none;
-  }
-
-  .custom_button {
-    width: 100% !important;
-  }
-
-  .container.retracted:hover {
-    height: auto !important;
-  }
-
-  .image.retracted {
-    margin-right: 0px !important;
-  }
-
-  .container.retracted:hover .image.retracted {
-    margin-right: 0px;
-  }
+.custom_button .text {
+  font-size: 1rem !important;
 }
 
 .links {
@@ -94,8 +38,7 @@
   width: 100%;
   margin: 5px 0px;
   border-radius: 5px;
-  padding: 2px 10px;
-  padding-left: 20px;
+  padding-left: 5px;
 
   display: flex;
   align-items: flex-start;
@@ -154,26 +97,23 @@
 .retract {
   font-size: 0.9rem;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
   width: 100%;
-  margin-bottom: 30px;
-  margin-top: -10px;
-  margin-right: -20px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .retract_button {
   border-radius: 10px;
-  border: 1px solid black;
-  padding: 0px 8px;
-  margin-left: 10px;
+  border: 2px dashed rgb(62, 62, 62);
+  padding: 5px 5px;
   cursor: pointer;
-  width: fit-content;
+  width: 35px !important;
+  text-align: center !important;
   transition: background-color 0.1s;
 }
 
 .retract_button:hover {
-  background-color: #ef635d;
+  background-color: #b5bbff;
 }
 
 .custom_button .text {
@@ -195,32 +135,142 @@
 }
 
 .container.retracted {
-  height: 15vh;
+  height: 130px;
   overflow-y: hidden;
   overflow-x: hidden;
   margin-left: -50px;
 }
 
+.container.retracted .retract_button {
+  display: none;
+}
+
 .container.retracted:hover {
-  height: 48vh;
-  margin-left: 30px;
+  height: fit-content;
+  margin-left: 0px;
 }
 
 .image {
   width: 3.5rem;
   height: 3.5rem;
   object-fit: contain;
-  margin-bottom: 1.3rem;
-}
-
-.image {
+  margin-bottom: 0;
   transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  margin-bottom: 0.5em;
 }
 
 .image.retracted {
-  margin-right: -40px;
+  margin-bottom: 2em;
+  margin-left: 2em;
+  margin-top: 1em;
 }
 
 .container.retracted:hover .image.retracted {
   margin-right: 0px;
+  margin-bottom: 0.5em;
+  margin-left: 0px;
+}
+
+.container.retracted:hover .retract {
+  justify-content: center;
+}
+
+.container.retracted:hover .retract_button {
+  display: flex;
+}
+
+@media (max-width: 650px) {
+  .container {
+    margin-left: 0;
+    margin-top: 1em;
+    margin-right: 0;
+    margin-bottom: -0.1em;
+
+    width: 95%;
+    height: auto !important;
+    padding: 0.7em;
+    z-index: 2 !important;
+  }
+  .image.retracted {
+    margin: 0 !important;
+  }
+  .links {
+    flex-direction: row !important;
+    flex-wrap: wrap;
+    align-items: center;
+    height: auto !important;
+  }
+  .link {
+    margin: 0.1em !important;
+  }
+
+  .link.active {
+    background-color: var(--ink-background-highlight);
+    border: 1.5px dashed rgb(112, 112, 112);
+  }
+
+  .retracted.links {
+  }
+
+  .retract {
+    width: 35px;
+    text-align: center;
+  }
+
+  .retract_button {
+    scale: 1;
+    width: 35px;
+    text-align: center;
+  }
+
+  .retract .retract_button {
+    flex-direction: column;
+  }
+
+  .container.retracted {
+    width: 95%;
+    margin-left: 0;
+    position: unset;
+    margin-bottom: -0.1em;
+  }
+
+  .container.retracted .retract_button {
+    display: flex;
+    width: 35px;
+    text-align: center;
+  }
+
+  .logoRetract {
+    display: flex;
+
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 0.4em;
+    align-items: center;
+  }
+
+  .container.retracted .links {
+    display: none;
+  }
+
+  .custom_button {
+    width: 100%;
+  }
+
+  .custom_button .text {
+    font-size: 0.9rem;
+  }
+
+  .container.retracted:hover {
+    height: auto;
+  }
+
+  .image.retracted {
+    margin-right: 0px;
+  }
+
+  .container.retracted:hover .image.retracted {
+    margin-right: 0px;
+  }
 }
